1.Implemented Login and Registation Apis

--- a/app/src/main/res/layout/activity_update_user_profile.xml
+++ b/app/src/main/res/layout/activity_update_user_profile.xml
@@ -201,7 +201,7 @@
                     android:focusable="@{isEditable ? true : false }"
                     android:focusableInTouchMode="@{isEditable ? true : false }"
                     android:tag="4"
-                    android:text="@={upDateUserProfile.email}"
+                    android:text="@={upDateUserProfile.userEmail}"
                     />
             </com.incon.service.custom.view.CustomTextInputLayout>
 
