--- a/app/src/main/res/layout/fragment_adduser.xml
+++ b/app/src/main/res/layout/fragment_adduser.xml
@@ -83,7 +83,7 @@
                 app:met_textColorHint="@color/colorForgotPasswordHintText"/>
 
             <!-- Date of Birth -->
-            <com.incon.service.custom.custom.view.CustomTextInputLayout
+            <com.incon.service.custom.view.CustomTextInputLayout
                 android:id="@+id/input_layout_register_dob"
                 style="@style/Register_TextInputLayout"
                 android:layout_below="@id/spinner_gender"
@@ -99,7 +99,7 @@
                     android:tag="3"
                     android:text="@={addUser.dateOfBirthToShow}"
                     />
-            </com.incon.service.custom.custom.view.CustomTextInputLayout>
+            </com.incon.service.custom.view.CustomTextInputLayout>
 
             <!--dummy view for dob click event -->
             <View
@@ -138,7 +138,7 @@
 
 
             <!-- Password -->
-            <com.incon.service.custom.custom.view.CustomTextInputLayout
+            <com.incon.service.custom.view.CustomTextInputLayout
                 android:id="@+id/input_layout_register_password"
                 style="@style/Register_TextInputLayout"
                 android:layout_below="@id/input_layout_register_emailid"
@@ -158,10 +158,10 @@
                     android:maxLines="1"
                     android:tag="5"
                     android:text="@={addUser.password}"/>
-            </com.incon.service.custom.custom.view.CustomTextInputLayout>
+            </com.incon.service.custom.view.CustomTextInputLayout>
 
             <!-- confirm Password -->
-            <com.incon.service.custom.custom.view.CustomTextInputLayout
+            <com.incon.service.custom.view.CustomTextInputLayout
                 android:id="@+id/input_layout_register_confirm_password"
                 style="@style/Register_TextInputLayout"
                 android:layout_below="@id/input_layout_register_password"
@@ -181,7 +181,7 @@
                     android:maxLines="1"
                     android:tag="6"
                     android:text="@={addUser.confirmPassword}"/>
-            </com.incon.service.custom.custom.view.CustomTextInputLayout>
+            </com.incon.service.custom.view.CustomTextInputLayout>
 
             <!-- Address -->
             <com.incon.service.custom.view.CustomTextInputLayout
@@ -213,13 +213,11 @@
                 android:background="@null"
                 android:onClick="@{() -> addUserFragment.onAddressClick()}"/>
 
-
-
             <com.incon.service.custom.view.CustomTextInputLayout
                 android:id="@+id/input_layout_register_service_CenterId"
                 style="@style/Register_TextInputLayout"
                 android:layout_below="@id/input_layout_register_address"
-                android:hint="@string/register_gstn_hint"
+                android:hint="@string/service_center_id_hint"
                 app:errorEnabled="true"
                 app:fontName="fonts/OpenSans-Regular.ttf"
                 app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
@@ -239,8 +237,8 @@
             <com.incon.service.custom.view.CustomTextInputLayout
                 android:id="@+id/input_layout_register_service_CenterRoleId"
                 style="@style/Register_TextInputLayout"
-                android:layout_below="@id/spinner_brand"
-                android:hint="@string/register_gstn_hint"
+                android:layout_below="@id/input_layout_register_service_CenterId"
+                android:hint="@string/service_cente_role_id_hint"
                 app:errorEnabled="true"
                 app:fontName="fonts/OpenSans-Regular.ttf"
                 app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
